# static-file-index

./: README.md  apindex.py  changelog  pyproject.toml
src/apindex/: __init__.py
test/: index.html
test/+Plus/: index.html
