[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apindex"
version = "3.0.0"
authors = [
  { name="Elijah Lopez", email="elijahllopezz@gmail.com" },
  { name="Ognjen Galic", email="smclt30p@gmail.com" },
]
description = "Static HTML file index generator. This program enables you to generate FTP-like index.html files for static web servers such as Github Pages or mini HTTP servers"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: System :: Archiving :: Packaging",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Software Development :: Build Tools",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Sovereign-Engineering/static-file-index/"
Issues = "https://github.com/Sovereign-Engineering/static-file-index/issues"

[project.scripts]
apindex = "apindex:main"
